/*
 * This file is part of Astarte.
 *
 * Copyright 2022 SECO Mind Srl
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package astarteplatform.msghub;

import "google/protobuf/timestamp.proto";

import "astarteplatform/msghub/astarte_type.proto";

/* Astarte Data message used when receiving data or an error from Astarte. */
message AstarteDataMessage{
  oneof data_message {
    AstarteMessage astarte_message = 1; // A message that contains data sent from Astarte.
    AstarteError astarte_error = 2;     // A message that contains a specific Astarte Message Hub error.
  }
}

/* Astarte message to be used when sending data to Astarte. */
message AstarteMessage{
  string interface_name = 1;               // Name of the interface to send data on.
  string path = 2;                         // Endpoint to send the data on.
  oneof payload {                          // Content of the message.
    AstarteDataType astarte_data = 3;      // Effective payload.
    AstarteUnset astarte_unset = 4;        // Null payload.
  }
  google.protobuf.Timestamp timestamp = 5; // Explicit timestamp for the message transmission.
}

/* Null payload for an `AstarteMessage`. */
message AstarteUnset{}

/* Astarte Error type */
message AstarteError{
  // A list specifying general categories of Astarte Message Hub error.
  enum ErrorCode{
    UNKNOWN = 0;              // Unknown error.
    ASTARTE_INVALID_DATA = 1; // Error occurred when trying to send an invalid data.
    ASTARTE_SDK_ERROR = 2;    // Error returned by the Astarte SDK.
    CONVERSION_ERROR = 3;     // Error occurred during conversion between types.
  }

  ErrorCode error_code = 1;     // Error enum value.
  string error_description = 2; // Human-readable string describing the error.
}
