/*
 * This file is part of Astarte.
 *
 * Copyright 2024 SECO Mind Srl
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */


syntax = "proto3";

package astarteplatform.msghub;

/* This message defines a list of json interfaces to be added/removed to the Astarte message hub. */
message InterfacesJson {
  repeated string interfaces_json = 1; // An array of json interfaces.
}

/* This message defines a list of interfaces' names to be removed from the Astarte message hub. */
message InterfacesName {
  repeated string names = 1; // An array of interfaces' names
}

/* Enum representing an Astarte interface ownership. */
enum Ownership {
  DEVICE = 0;
  SERVER = 1;
}
